// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parses metadata in a syntactically correct markdown document 1`] = `
Object {
  "content": "
Correct markdown document. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
---
Correct markdown document. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.

Correct markdown document. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.",
  "metadata": Object {
    "author": "Marcus Antonius",
    "keywords": "latin, ipsum",
    "title": "Lorem ipsum dolor sit amet, consectetur adipiscing",
  },
}
`;

exports[`returns TypeError if it doesn't receive a String 1`] = `"Source parameter (src) must be a string."`;

exports[`returns no metadata in a document with empty metadata 1`] = `
Object {
  "content": "
Empty metadata. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.",
  "metadata": Object {},
}
`;

exports[`returns no metadata in a document with metadata placed at the end 1`] = `
Object {
  "content": "Metadata not at the beginning of the document. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.

---
title: The murder of our hopes and dreams
author: Master John
keywords: comedy, movie
---",
  "metadata": Object {},
}
`;

exports[`returns no metadata in a document without metadata 1`] = `
Object {
  "content": "# Document with no metadata

Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.",
  "metadata": Object {},
}
`;

exports[`returns no metadata in a document without the ending triple dashes 1`] = `
Object {
  "content": "---
title: Lorem ipsum dolor sit amet, consectetur adipiscing
author: Marcus Antonius
keywords: latin, ipsum

No metadata end. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.",
  "metadata": Object {},
}
`;

exports[`returns no metadata in a document without the opening triple dashes 1`] = `
Object {
  "content": "title: Lorem ipsum dolor sit amet, consectetur adipiscing
author: Marcus Antonius
keywords: latin, ipsum
---

No metadata start. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.",
  "metadata": Object {},
}
`;
